# QtCalculator

./: CMakeLists.txt  README.md  calculator.cpp  calculator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
calc/: calculator.cpp  calculator.h
ui/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
ui/mainwindow/myPowTest/: myPowWindow.cpp  myPowWindow.h  myPowWindow.ui  ui_myPowWindow.hpp
ui/mainwindow/mySqrtTest/: mySqrtWindow.cpp  mySqrtWindow.h  mySqrtWindow.ui  ui_mySqrtWindow.h
